[package]
name = "img2color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
image = "0.24.6"
palette = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }

[profile.release]
lto = true
opt-level = 'z'
strip = true
